# pydune

./: .gitmodules  CMakeLists.txt  _imcpy.pyi  pyproject.toml  setup.py
ros2_ws/src/lauv/: CMakeLists.txt  README_ROS2.md  README_params.md  package.xml
ros2_ws/src/lauv/config/: vehicle_params.yaml
ros2_ws/src/lauv/launch/: complete_vehicle.launch.py  lauv_wrapper.launch.py  minimal_vehicle.launch.py  multi_vehicle.launch.py  simple_vehicle.launch.py  update_vehicle.launch.py  upload.launch  vehicle_control.launch.py
ros2_ws/src/lauv/robots/: default.xacro
ros2_ws/src/lauv/rviz/: lauv_rviz2.rviz  multi_vehicle.rviz
ros2_ws/src/lauv/scripts/: update_vehicle.py  vehicle_controller.py  vehicle_position_service.py
ros2_ws/src/lauv/test/: test_urdf_files.test
ros2_ws/src/lauv/urdf/: base.xacro  lauv_ros2.xacro  snippets.xacro
