[build-system]
requires = [
    "setuptools>=61.0.0",
    "wheel",
    "cmake>=3.8",
    "pybind11>=2.6.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "imcpy"
version = "1.1.2"
description = "Python bindings for DUNE-IMC"
readme = "README.md"
authors = [
    {name = "Oystein Sture", email = "oysstu@gmail.com"}
]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "Intended Audience :: Other Audience",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]
requires-python = ">=3.6"
dependencies = [
    "ifaddr",
]

[project.optional-dependencies]
LSFExporter = ["pandas"]

[project.urls]
Homepage = "https://github.com/oysstu/imcpy"
"Bug Tracker" = "https://github.com/oysstu/imcpy/issues"

[tool.setuptools.packages.find]
include = ["imcpy*"]

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.pyi"]
"imcpy.coordinates" = ["*.pyi"]
"imcpy.algorithms" = ["*.pyi"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.format]
quote-style = "single"
